# TLWallNew

./: LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
doc/: EXAMPLES_MULTIPLE.md  GUI.md  GUI_MENU_BAR.md  GUI_PLOT_PANEL.md  GUI_SIDEBAR.md  INSTALLATION.md  PYTLWALL_THEORY.md
doc/html/: EXAMPLES_MULTIPLE.html  GUI.html  GUI_MENU_BAR.html  GUI_PLOT_PANEL.html  GUI_SIDEBAR.html  INSTALLATION.html  PYTLWALL_THEORY.html  index.html
examples/ex_CW/output/: output.xlsx
examples/ex_CWMag/output/: output.xlsx
examples/ex_PEC/output/: output.xlsx
examples/ex_Vac/output/: output.xlsx
examples/ex_lowbeta/output/: output.xlsx
examples/ex_surface_impedance/output/: output.xlsx
examples/ex_surface_impedance_input/output/: output.xlsx
examples/ex_without_cfg/output/: output.xlsx
pytlwall/: __main__.py
tests/doc/: RUN_TESTS_BASE.md  TESTING.md  tests_README.md
